--- a/distribution/docs/src/main/resources/content/_running/overriding-attributes.adoc
+++ b/distribution/docs/src/main/resources/content/_running/overriding-attributes.adoc
@@ -7,22 +7,4 @@
 
 == {title}
 
-Automatically change the value of an existing attribute on ingest by setting an attribute override.
-
-[NOTE]
-====
-Attribute overrides are available for the following ingest methods:
-
-* Content Directory Monitor.
-* Confluence source.
-====
-
-. Navigate to the *${admin-console}*.
-. Select the *${ddf-catalog}* application.
-. Select *Configuration*.
-. Select the configuration for the desired ingest method.
-.. *Catalog Content Directory Monitor*.
-.. *Confluence Connected Source*.
-.. *Confluence Federated Source*.
-. Select *Attribute Overrides*.
-. Enter the key-value pair for the attribute to override and the value(s) to set.
+// TODO
