DDF-3660 re-MSFify original CDM
- Remove SourceHarvester

--- a/distribution/docs/src/main/resources/content/_tables/ContentDirectoryMonitor.adoc
+++ b/distribution/docs/src/main/resources/content/_tables/ContentDirectoryMonitor.adoc
@@ -1,5 +1,5 @@
 :title: Content Directory Monitor
-:id: org.codice.ddf.catalog.harvest.ContentDirectoryMonitor
+:id: org.codice.ddf.catalog.harvest.directory.ContentDirectoryMonitor
 :type: table
 :status: published
 :application: ${ddf-catalog}
